src/test/ui/parser/issues/issue-68091-unicode-ident-after-if.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ* {}
        //~^ ERROR missing condition for `if` expression
    };
}

fn main() {
    x!(if);
}
